Change image file extension from .jpg to .jpeg

--- a/adem-portfolio-single.html
+++ b/adem-portfolio-single.html
@@ -61,7 +61,7 @@
           <div class="relative w-48 h-48 mx-auto rounded-full border-4 border-white/20 overflow-hidden backdrop-blur-sm bg-gradient-to-br from-blue-500/20 to-purple-500/20"></div>
         </div>
       </div>
-      <img src="adempic.jpg" alt="Adem Khelifi" class="w-full h-full object-cover">
+      <img src="adempic.jpeg" alt="Adem Khelifi" class="w-full h-full object-cover">
       <h1 class="text-6xl sm:text-8xl font-bold mb-6 bg-gradient-to-r from-blue-400 via-purple-400 to-cyan-400 text-transparent bg-clip-text animate-gradient">
         Adem Khelifi
       </h1>
